# django-biology

./: .env.example  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/carrot/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/carrot/src/: App.vue  app.html  main.js  routers.js  store.js  style.css
src/: pytest.ini
src/api/: serializers.py  urls.py  views.py
src/articles/: admin.py  apps.py  forms.py  middleware.py  models.py  receivers.py  services.py  urls.py  views.py
src/articles/markdown/: Теории происхождения жизни.md
src/articles/migrations/: 0001_initial.py  0002_alter_article_slug.py  0003_alter_article_options_alter_category_options_image.py  0004_alter_image_image.py  0005_article_publish.py
src/articles/models/: __init__.py  article.py  category.py  image.py
src/articles/templatetags/: article_extras.py
src/articles/tests/: test_helpers.py  test_views.py
src/carrot/frontend/: package-lock.json
src/config/: settings.py  test_settings.py  urls.py
src/deutsch/: admin.py  apps.py  models.py  urls.py  views.py
src/deutsch/migrations/: 0001_initial.py  0002_word_created_at.py  0003_alter_listcategory_options_alter_word_options_and_more.py  0004_alter_word_list_category_alter_word_word_list.py  0005_alter_word_list_category_alter_word_word_list.py  0006_alter_word_translated_word.py  (+1 more)
src/feedback/: admin.py  apps.py  forms.py  mails.py  models.py  receivers.py  urls.py  views.py
src/static/: style.css
src/templates/: 404.html  500.html
(+83 files in other folders)
